--- a/article/refs.bib
+++ b/article/refs.bib
@@ -315,7 +315,7 @@ Landsat and RapidEye Imagery over Mexico in 2010 and 2015 respectively.},
 	author = {Sólymos, Péter and Stralberg, Diana},
 	month = sep,
 	year = {2020},
-	keywords = {avian, boreal, Canada, density models},
+	keywords = {Canada, avian, boreal, density models},
 	file = {bam-national-models-v40.pdf:C\:\\Users\\brand\\OneDrive\\Academia\\Literature\\bam-national-models-v40.pdf:application/pdf},
 }
 
@@ -749,7 +749,7 @@ Landsat and RapidEye Imagery over Mexico in 2010 and 2015 respectively.},
 	author = {Bled, Florent and Sauer, John and Pardieck, Keith and Doherty, Paul and Royle, J. Andrew},
 	month = dec,
 	year = {2013},
-	keywords = {Animal sexual behavior, Birds, Climate change, Conservation science, Geography, Spatial autocorrelation, Winter, Woodpeckers},
+	keywords = {Birds, Conservation science, Animal sexual behavior, Climate change, Geography, Spatial autocorrelation, Winter, Woodpeckers},
 	pages = {e81867},
 	file = {Full Text:/home/brandon/Zotero/storage/QI5JW4LG/Bled et al. - 2013 - Modeling Trends from North American Breeding Bird .pdf:application/pdf},
 }
@@ -1659,7 +1659,7 @@ Landsat and RapidEye Imagery over Mexico in 2010 and 2015 respectively.},
 	language = {en},
 	urldate = {2024-07-02},
 	journal = {Frontiers in Ecology and the Environment},
-	author = {Bennett, Joseph R and Edwards, Brandon Pm and Bergman, Jordanna N and Binley, Allison D and Buxton, Rachel T and Hanna, Dalal El and Hanson, Jeffrey O and Hudgins, Emma J and Karimi, Sahebeh and Raymond, Calla V and Robichaud, Courtney D and Rytwinski, Trina},
+	author = {Bennett, Joseph R and Edwards, Brandon P.M. and Bergman, Jordanna N and Binley, Allison D and Buxton, Rachel T and Hanna, Dalal El and Hanson, Jeffrey O and Hudgins, Emma J and Karimi, Sahebeh and Raymond, Calla V and Robichaud, Courtney D and Rytwinski, Trina},
 	month = jul,
 	year = {2024},
 	pages = {e2782},
@@ -1946,4 +1946,15 @@ Landsat and RapidEye Imagery over Mexico in 2010 and 2015 respectively.},
 	year = {1991},
 	note = {Publisher: Springer},
 	pages = {1--20},
+}
+
+@article{english_current_2021,
+	title = {Current contrasting population trends among {North} {American} hummingbirds},
+	volume = {11},
+	number = {1},
+	journal = {Scientific Reports},
+	author = {English, Simon G and Bishop, Christine A and Wilson, Scott and Smith, Adam C},
+	year = {2021},
+	note = {Publisher: Nature Publishing Group UK London},
+	pages = {18369},
 }
